--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 0;
+    margin: 250px;
     font-family: Helvetica;
     text-align: center;
     background: rgb(13, 84, 85);
@@ -47,7 +47,7 @@ img {
 
 #freeRate {
     color: black;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
 }
 
@@ -56,7 +56,7 @@ img {
 }
 
 #phone {
-    background: rgb(86, 204, 108);
+    background: rgb(92, 213, 114);
     flex: 1;
     padding: 20px 0;
 }
